--- a/styles.css
+++ b/styles.css
@@ -116,3 +116,19 @@ button:active {
 #mainContentSection .container {
     padding-top: 24%; /* Adjust the padding as needed to position the text and buttons */
 }
+
+#yesMessage {
+    position: fixed; /* or absolute, depending on layout */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 24px; /* Adjust as needed */
+    color: #fff; /* Adjust as needed */
+    z-index: 1000; /* Significantly high to ensure it's on top */
+    display: none; /* Hidden by default */
+    width: 80%; /* Adjust as needed */
+    text-align: center; /* Ensure text is centered */
+    background-color: rgba(0,0,0,0.7); /* Optional: Adds background to make text more readable */
+    padding: 20px; /* Optional: Adds some space around the text */
+    border-radius: 10px; /* Optional: Rounds the corners of the background */
+}
